src/styles.css
/* ... */
.c23 {
  padding-top: 14pt;
  padding-bottom: 4pt;
  line-height: 1.15;
  page-break-after: avoid;
  orphans: 2;
  widows: 2;
  text-align: left;
}

.c18 {
  padding-top: 14pt;
  padding-bottom: 4pt;
  line-height: 1.15;
  page-break-after: avoid;
  orphans: 2;
  widows: 2;
  text-align: center;
}

.c28 {
  padding-top: 12pt;
  padding-bottom: 4pt;
  line-height: 1.15;
  page-break-after: avoid;
  orphans: 2;
  widows: 2;
  text-align: left;
}

.c15 {
  color: #000000;
  font-weight: 400;
  text-decoration: none;
  vertical-align: baseline;
  font-size: 11pt;
  font-family: "Arial";
  font-style: normal;
}

.c35 {
  font-weight: 400;
  text-decoration: none;
  vertical-align: baseline;
  font-size: 11pt;
  font-family: "Arial";
  font-style: normal;
}

.c6 {
  color: #000000;
  font-weight: 400;
  text-decoration: none;
  vertical-align: baseline;
  font-size: 11pt;
  font-family: "Arial";
}

.c7 {
  padding-top: 0pt;
  padding-bottom: 0pt;
  line-height: 1.15;
  orphans: 2;
  widows: 2;
  text-align: left;
}

.c118 {
  padding-top: 20pt;
  padding-bottom: 6pt;
  line-height: 1.15;
  page-break-after: avoid;
  text-align: left;
}

.c125 {
  padding-top: 16pt;
  padding-bottom: 4pt;
  line-height: 1.0;
  page-break-after: avoid;
  text-align: center;
}

.c39 {
  font-weight: 400;
  text-decoration: none;
  vertical-align: baseline;
  font-family: "Arial";
  font-style: normal;
}

.c91 {
  padding-top: 16pt;
  padding-bottom: 4pt;
  line-height: 1.15;
  page-break-after: avoid;
  text-align: center;
}

.c133 {
  padding-top: 16pt;
  padding-bottom: 4pt;
  line-height: 1.15;
  page-break-after: avoid;
  text-align: left;
}

.c80 {
  margin-left: 18pt;
  padding-top: 3pt;
  padding-bottom: 0pt;
  line-height: 1.0;
  text-align: left;
}

.c60 {
  margin-left: 90pt;
  padding-top: 3pt;
  padding-bottom: 0pt;
  line-height: 1.0;
  text-align: left;
}

.c21 {
  margin-left: 54pt;
  padding-top: 3pt;
  padding-bottom: 0pt;
  line-height: 1.0;
  text-align: left;
}

.c121 {
  padding-top: 18pt;
  padding-bottom: 6pt;
  line-height: 1.15;
  page-break-after: avoid;
  text-align: center;
}

.c47 {
  margin-left: 72pt;
  padding-top: 3pt;
  padding-bottom: 0pt;
  line-height: 1.0;
  text-align: left;
}

.c112 {
  padding-top: 18pt;
  padding-bottom: 6pt;
  line-height: 1.15;
  page-break-after: avoid;
  text-align: left;
}

.c135 {
  text-decoration-skip-ink: none;
  -webkit-text-decoration-skip: none;
  text-decoration: none;
}

.c119 {
  padding-top: 0pt;
  padding-bottom: 0pt;
  line-height: 1.15;
  text-align: right;
}

.c10 {
  padding-top: 0pt;
  padding-bottom: 0pt;
  line-height: 1.0;
  text-align: center;
}

.c134 {
  padding-top: 3pt;
  padding-bottom: 0pt;
  line-height: 1.0;
  text-align: left;
}

.c0 {
  padding-top: 0pt;
  padding-bottom: 0pt;
  line-height: 1.0;
  text-align: left;
}

.c72 {
  font-weight: 400;
  text-decoration: none;
  vertical-align: baseline;
  font-family: "Arial";
}

.c136 {
  padding-top: 0pt;
  padding-bottom: 0pt;
  line-height: 1.15;
  text-align: center;
}

.c40 {
  text-decoration: none;
  vertical-align: baseline;
  font-family: "Arial";
  font-style: normal;
}

.c113 {
  padding-top: 0pt;
  padding-bottom: 0pt;
  line-height: 1.0;
  text-align: right;
}

.c19 {
  border-spacing: 0;
  border-collapse: collapse;
  margin-right: auto;
}

.c139 {
  text-decoration: none;
  vertical-align: baseline;
  font-family: "Arial";
}

.c74 {
  border-spacing: 0;
  border-collapse: collapse;
  margin-right: auto;
}

.c120 {
  background-color: #ffffff;
  max-width: 100%;
  padding: 72pt 25% 72pt 25%;
  font-family: "Arial";
  font-style: normal;
}

.c57 {
  orphans: 2;
  widows: 2;
}

.c103 {
  margin-left: 72pt;
  padding-left: 0pt;
}

.c142 {
  width: 33%;
  height: 1px;
}

.c11 {
  color: inherit;
  text-decoration: inherit;
  width: 100%;
}

.c34 {
  padding: 0;
  margin: 0;
}

.c43 {
  height: 22.4pt;
}

.c8 {
  margin-left: 36pt;
}

table.c8 {
  margin-left: auto;
}

.c26 {
  vertical-align: super;
}

.c22 {
  font-weight: 700;
}

.c58 {
  font-size: 14pt;
}

.c33 {
  font-size: 10pt;
}

.c37 {
  text-indent: 36pt;
}

.c42 {
  font-size: 12pt;
}

.c137 {
  height: 20.1pt;
}

.c1 {
  font-style: italic;
}

.c143 {
  margin-left: 72pt;
}

.c76 {
  font-size: 18pt;
}

.c96 {
  height: 23.9pt;
}

.c9 {
  height: 11pt;
}

.c41 {
  height: 25pt;
}

.c64 {
  font-size: 20pt;
}

.c16 {
  height: 21pt;
}

.c140 {
  height: 35.8pt;
}

.c27 {
  color: #000000;
}

.c78 {
  font-size: 15pt;
}

.c2 {
  height: 0pt;
}

.c32 {
  font-size: 11pt;
}

.c115 {
  padding-left: 0pt;
}

.c88 {
  font-size: 16pt;
}

.c126 {
  height: 35pt;
}

.title {
  padding-top: 20pt;
  color: #000000;
  font-size: 20pt;
  padding-bottom: 6pt;
  font-family: "Arial";
  line-height: 1.15;
  page-break-after: avoid;
  orphans: 2;
  widows: 2;
  text-align: left;
}

.subtitle {
  padding-top: 0pt;
  color: #666666;
  font-size: 15pt;
  padding-bottom: 16pt;
  font-family: "Arial";
  line-height: 1.15;
  page-break-after: avoid;
  orphans: 2;
  widows: 2;
  text-align: left;
}

li {
  color: #000000;
  font-size: 11pt;
  font-family: "Arial";
}

p {
  margin: 0;
  color: #000000;
  font-size: 11pt;
  font-family: "Arial";
}

h1 {
  padding-top: 20pt;
  color: #000000;
  font-size: 20pt;
  padding-bottom: 6pt;
  font-family: "Arial";
  line-height: 1.15;
  page-break-after: avoid;
  orphans: 2;
  widows: 2;
  text-align: left;
}

h2 {
  padding-top: 18pt;
  color: #000000;
  font-size: 16pt;
  padding-bottom: 6pt;
  font-family: "Arial";
  line-height: 1.15;
  page-break-after: avoid;
  orphans: 2;
  widows: 2;
  text-align: left;
}

h3 {
  padding-top: 16pt;
  color: #434343;
  font-size: 14pt;
  padding-bottom: 4pt;
  font-family: "Arial";
  line-height: 1.15;
  page-break-after: avoid;
  orphans: 2;
  widows: 2;
  text-align: left;
}
/* ... */

